src/test/ui/underscore-imports/hygiene.stderr
error[E0599]: no method named `deref` found for reference `&()` in the current scope
  --> $DIR/hygiene.rs:38:11
   |
LL |     (&()).deref();
   |           ^^^^^ method not found in `&()`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use std::ops::Deref;
   |

error[E0599]: no method named `deref_mut` found for mutable reference `&mut ()` in the current scope
  --> $DIR/hygiene.rs:39:15
   |
LL |     (&mut ()).deref_mut();
   |               ^^^^^^^^^ method not found in `&mut ()`
   |
   = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
   |
LL | use std::ops::DerefMut;
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
